5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1674_1872.log
== TEST (2019-04-28 17:20:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo x")
elif (y==0):
	print ("Eixo y")
elif (x==0 and y==0):
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:20:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
elif (x==0 and y==0):
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:20:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
elif (x==0 and y==0):
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:20:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
elif (x==0 and y==0):
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:20:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
elif (x==0 and y==0):
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:20:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
elif (x==0 and y==0):
	print ("Origem")
-- EXECUTION TIME:
0.170975
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:21:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
elif (x==0 and y==0):
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:21:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
elif (x==0 or y==0):
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:21:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
else:
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:21:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
elif (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
else:
	print ("Origem")
-- EXECUTION TIME:
0.185978
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Digite x: Digite y: Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Digite x: Digite y: Eixo y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:22:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x < 0 and y>0):
	print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
else:
	print ("Origem")
-- ERROR:
File "XXXX", line 8
    print ("Q2")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:22:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x < 0 and y>0):
		print ("Q2")
elif (x<0 and y < 0):
	print ("Q3")
elif (x>0 and y<0):
	print ("Q4")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
else:
	print ("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:23:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0): 
	print ("Eixo y")
elif (y==0):
	print ("Eixo x")
else:
	print ("Origem")
-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:24:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo x")
else:
	print ("Origem")
-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:25:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo x")
else:
	print ("Eixo y")
-- OUTPUT:
Eixo y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:25:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo x")
else:
	print ("Eixo y")
-- OUTPUT:
Eixo y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:25:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo x")
else:
	print ("Eixo y")
-- OUTPUT:
Eixo y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:25:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo x")
else:
	print ("Eixo y")
-- EXECUTION TIME:
0.199214
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo x
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:25:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo x")
else:
	print ("Eixo y")
-- OUTPUT:
Eixo y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:26:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo X")
else:
	print ("Eixo Y")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:26:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo X")
else:
	print ("Eixo Y")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:26:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo X")
else:
	print ("Eixo Y")
-- EXECUTION TIME:
0.166894
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo Y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:26:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo X")
else:
	print ("Eixo Y")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:26:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo X")
else:
	print ("Eixo Y")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 17:27:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo X")
else:
	print ("Eixo Y")
-- EXECUTION TIME:
0.138599
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo Y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 17:27:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x > 0 and y >0):
	print ("Q1")
	if (x>0 and y<0):
		print ("Q4")
	elif (x < 0 and y>0):
		print ("Q2")
	elif (x<0 and y < 0):
		print ("Q3")
elif (x==0 and y ==0): 
	print ("Origem")
elif (y==0):
	print ("Eixo X")
else:
	print ("Eixo Y")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:59:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x==0 and y==0):
	print("Origem")
elif (x!=y and x==0):
	print("Eixo Y")
elif (x!=y and y==0):
	print("Eixo X")
elif (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 12:59:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x==0 and y==0):
	print("Origem")
elif (x!=y and x==0):
	print("Eixo Y")
elif (x!=y and y==0):
	print("Eixo X")
elif (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:00:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Digite x: "))
y = float(input("Digite y: "))

if (x==0 and y==0):
	print("Origem")
elif (x!=y and x==0):
	print("Eixo Y")
elif (x!=y and y==0):
	print("Eixo X")
elif (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
-- EXECUTION TIME:
0.151499
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
